k8s/prusaslicer/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        nvidia.com/gpu.present: 'true'
      runtimeClassName: nvidia
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: prusaslicer
          image: docker.io/mikeah/prusaslicer-novnc:2024.09.13.005624
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
              nvidia.com/gpu: 1
          securityContext:
            privileged: false
            # allowPrivilegeEscalation: false
            # runAsNonRoot: true
            # runAsUser: 1000
            # runAsGroup: 1000
            # readOnlyRootFilesystem: true
            # capabilities:
            #   drop: [ALL]
          volumeMounts:
            - name: volume
              mountPath: /configs
            - name: truenas-media
              mountPath: /media
          ports:
            - name: http
              containerPort: 8080
