k8s/prusaslicer/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://prusaslicer.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: prusaslicer
    gethomepage.dev/group: 3D Printing
    gethomepage.dev/icon: mdi-printer-3d
    gethomepage.dev/name: PrusaSlicer

spec:
  ingressClassName: internal
  rules:
    - host: &host prusaslicer.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
